--- a/app/src/main/res/layout/activity_local_sign_in.xml
+++ b/app/src/main/res/layout/activity_local_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_image"
-    tools:context=".SignActivity">
+    tools:context=".LocalSignInActivity">
 
     <LinearLayout
         android:background="@drawable/sign_bg"
@@ -26,48 +26,72 @@
             android:background="@drawable/sign_form_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_marginHorizontal="30dp"
-            android:padding="10dp"
+            android:padding="20dp"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="55dp"
-                android:text="로그인" />
 
-            <ImageView
-                android:id="@+id/imageView3"
+            <TextView
+                android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/line" />
+                android:layout_marginTop="60dp"
+                android:text="이메일 주소"
+                android:textSize="12sp"/>
 
-            <ImageView
-                android:id="@+id/imageView6"
+            <EditText
+                android:id="@+id/editTextTextEmailAddress"
+                android:background="@drawable/text_view_form"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
+
+            <TextView
+                android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                app:srcCompat="@drawable/local_login" />
+                android:text="비밀번호"
+                android:textSize="12sp"/>
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <EditText
+                android:id="@+id/editTextTextPassword"
+                android:background="@drawable/text_view_form"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="비밀번호를 다시 확인해주세요"
+                android:textSize="8sp"
+                android:textColor="#870000"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/kakao_login" />
+                android:gravity="end"
+                android:text="비밀번호 찾기"
+                android:textSize="8sp"/>
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/imageView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="55dp"
-                app:srcCompat="@drawable/google_login" />
-
+                app:srcCompat="@drawable/login_button" />
         </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
