--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_image"
-    tools:context=".LocalSignInActivity">
+    tools:context=".FindPwActivity">
 
     <LinearLayout
         android:background="@drawable/sign_bg"
@@ -34,11 +34,18 @@
 
 
             <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="비밀번호 찾기"
+                android:textSize="20sp"/>
+
+            <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
-                android:text="이메일 주소"
+                android:layout_marginTop="20dp"
+                android:text="가입한 이메일로 찾기"
                 android:textSize="12sp"/>
 
             <EditText
@@ -48,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:padding="5dp"
+                android:hint="이메일 주소"
                 android:ems="10"
                 android:inputType="textEmailAddress" />
 
@@ -59,67 +67,55 @@
                 android:text="비밀번호"
                 android:textSize="12sp"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/editTextTextPassword"
-                    android:layout_width="match_parent"
+                    android:id="@+id/editTextPhone"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="5"
                     android:background="@drawable/text_view_form"
-                    android:textSize="14sp"
-                    android:padding="5dp"
                     android:ems="10"
-                    android:inputType="textPassword"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:inputType="phone"
+                    android:padding="5dp"
+                    android:textSize="14sp" />
 
                 <ImageView
-                    android:id="@+id/imageView9"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_marginEnd="4dp"
-                    android:clickable="true"
-                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-                    app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
-                    app:srcCompat="@drawable/eye_open" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:id="@+id/imageView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/verification_code_btn" />
 
-            <TextView
-                android:id="@+id/textView7"
+
+            </LinearLayout>
+
+
+            <EditText
+                android:id="@+id/editTextNumberSigned"
+                android:background="@drawable/text_view_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="비밀번호를 다시 확인해주세요"
-                android:textSize="8sp"
-                android:textColor="#870000"
-                android:visibility="gone"/>
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="end"
-                android:text="비밀번호 찾기"
-                android:textSize="8sp"
-                android:clickable="true"/>
+                android:hint="인증번호를 입력하세요"
+                android:textSize="14sp"
+                android:padding="5dp"
+                android:ems="10"
+                android:inputType="numberSigned" />
 
             <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="55dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
                 android:clickable="true"
-                app:srcCompat="@drawable/login_button" />
+                app:srcCompat="@drawable/pw_find_btn" />
+
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
