--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_image"
-    tools:context=".SignActivity">
+    tools:context=".SignInActivity">
 
     <LinearLayout
         android:background="@drawable/sign_bg"
@@ -51,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/local_login" />
 
             <ImageView
@@ -58,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/kakao_login" />
 
             <ImageView
@@ -66,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="55dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/google_login" />
 
         </LinearLayout>
