--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -26,7 +26,8 @@
         android:paddingHorizontal="100dp"
         android:text="회원가입"
         android:textSize="15sp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:clickable="true"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -45,7 +46,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="로그인"
-            android:textColor="#303030"/>
+            android:textColor="#303030"
+            android:clickable="true"/>
     </LinearLayout>
 
 </LinearLayout>
