--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -64,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="비밀번호"
+                android:text="휴대전화"
                 android:textSize="12sp"/>
 
             <LinearLayout
@@ -97,7 +97,7 @@
 
             <EditText
                 android:id="@+id/editTextNumberSigned"
-                android:background="@drawable/text_view_form"
+                android:background="@drawable/verification_code_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="인증번호를 입력하세요"
