--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,20 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_image"
-    android:orientation="vertical"
     tools:context=".SignUpActivity">
 
     <LinearLayout
         android:background="@drawable/sign_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <FrameLayout
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginHorizontal="120dp"
+            app:srcCompat="@drawable/logo_image" />
+
+        <LinearLayout
             android:background="@drawable/sign_form_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:layout_marginHorizontal="30dp"
             android:padding="20dp"
             android:orientation="vertical"
@@ -29,12 +36,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:srcCompat="@drawable/sign_up_btn" />
+
             <me.relex.circleindicator.CircleIndicator3
                 android:id="@+id/indicator"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_gravity="bottom"/>
-        </FrameLayout>
+                android:layout_height="20dp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
