--- a/app/src/main/res/layout/fragment_sign_up_first.xml
+++ b/app/src/main/res/layout/fragment_sign_up_first.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="이메일 주소"
         android:textSize="12sp" />
 
@@ -28,7 +28,7 @@
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="비밀번호"
         android:textSize="12sp"/>
 
@@ -68,7 +68,7 @@
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="비밀번호확인"
         android:textSize="12sp"/>
 
@@ -118,7 +118,7 @@
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="이름"
         android:textSize="12sp"/>
 
@@ -132,13 +132,37 @@
         android:ems="10"
         android:inputType="textPersonName" />
 
-    <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="성별"
+        android:textSize="12sp"/>
+
+    <RadioGroup
+        android:id="@+id/genderRG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/maleBtn"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="10dp"
-            android:clickable="true"
-            app:srcCompat="@drawable/sign_up_btn" />
+            android:layout_marginRight="5dp"
+            android:text="남성"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:id="@+id/femaleBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="여성"
+            android:textSize="10sp"/>
+    </RadioGroup>
+
+
 
 </LinearLayout>
