--- a/app/src/main/res/layout/fragment_sign_up_second.xml
+++ b/app/src/main/res/layout/fragment_sign_up_second.xml
@@ -6,6 +6,96 @@
     android:gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="키"
+        android:textSize="12sp" />
 
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/heightSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown"/>
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="몸무게"
+        android:textSize="12sp" />
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/weightSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown"/>
+    <!-- entries 속성은 실행오류나서 사용 안함 -->
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="나이"
+        android:textSize="12sp" />
+
+    <EditText
+        android:id="@+id/editTextNumberSigned2"
+        android:background="@drawable/text_view_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:padding="5dp"
+        android:ems="10"
+        android:inputType="numberSigned" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="휴대전화"
+        android:textSize="12sp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/editTextPhone"
+            android:background="@drawable/text_view_form"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:ems="10"
+            android:inputType="phone"
+            android:padding="5dp"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/verification_code_btn" />
+
+
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/editTextNumberSigned"
+        android:background="@drawable/verification_code_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="인증번호를 입력하세요"
+        android:textSize="14sp"
+        android:padding="5dp"
+        android:ems="10"
+        android:inputType="numberSigned" />
 
 </LinearLayout>
