메인 홈 프래그먼트

--- a/app/src/main/res/layout/fragment_sign_up_second.xml
+++ b/app/src/main/res/layout/fragment_sign_up_second.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="20dp"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -80,7 +81,7 @@
         <ImageView
             android:id="@+id/imageView8"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             app:srcCompat="@drawable/verification_code_btn" />
 
@@ -92,9 +93,9 @@
         android:background="@drawable/verification_code_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:hint="인증번호를 입력하세요"
         android:textSize="14sp"
-        android:padding="5dp"
         android:ems="10"
         android:inputType="numberSigned" />
 
