--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -46,7 +46,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="로그인"
-            android:textColor="#303030"
+            android:textColor="#000000"
+            android:textStyle="bold"
             android:clickable="true"/>
     </LinearLayout>
 
