--- a/app/src/main/res/drawable/my_info_form.xml
+++ b/app/src/main/res/drawable/my_info_form.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:width="1dp"
-        android:color="#979797"/>
+        android:color="#BFBFBF"/>
 
-    <corners android:radius="5dp" />
+    <corners android:radius="30dp" />
 
 </shape>
