--- a/app/src/main/res/layout/fragment_main_mypage_update.xml
+++ b/app/src/main/res/layout/fragment_main_mypage_update.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView12"
@@ -255,6 +249,4 @@
 
     </LinearLayout>
 
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
