--- a/app/src/main/res/layout/fragment_main_cart_update.xml
+++ b/app/src/main/res/layout/fragment_main_cart_update.xml
@@ -33,37 +33,17 @@
         <!-- 리스트뷰 맨 아래에 상품을 추가할 수 있는 버튼 구현-->
     </ScrollView>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/registerBtn"
+        android:background="@drawable/btn_form"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="30dp"
         android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/registerBtn"
-            android:background="@drawable/btn_form"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingVertical="5dp"
-            android:paddingHorizontal="30dp"
-            android:text="등록"
-            android:textColor="@color/black"
-            android:clickable="true"/>
-
-        <TextView
-            android:id="@+id/cartCancelBtn"
-            android:background="@drawable/btn_form"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="10dp"
-            android:paddingVertical="5dp"
-            android:paddingHorizontal="30dp"
-            android:text="취소"
-            android:textColor="@color/black"
-            android:clickable="true"/>
-
-    </LinearLayout>
+        android:text="확인"
+        android:textColor="@color/black"
+        android:clickable="true"/>
 
 </LinearLayout>
