--- a/app/src/main/res/layout/fragment_mypage_mycloset.xml
+++ b/app/src/main/res/layout/fragment_mypage_mycloset.xml
@@ -35,7 +35,7 @@
 
 
     <TextView
-        android:id="@+id/updateBtn"
+        android:id="@+id/closetUpdateBtn"
         android:background="@drawable/btn_form"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
