--- a/app/src/main/res/layout/activity_social_sign_up.xml
+++ b/app/src/main/res/layout/activity_social_sign_up.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="신체정보 입력"
+                android:text="신체정보"
                 android:textSize="20sp"/>
 
             <TextView
