--- a/app/src/main/res/layout/activity_find_pw_new.xml
+++ b/app/src/main/res/layout/activity_find_pw_new.xml
@@ -126,7 +126,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="10dp"
                 android:clickable="true"
-                app:srcCompat="@drawable/pw_find_btn" />
+                app:srcCompat="@drawable/change_pw_btn" />
 
         </LinearLayout>
     </LinearLayout>
