--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/hideBtn"
+        <LinearLayout
+            android:id="@+id/hideBtnWrapper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
-            android:visibility="gone"
-            app:srcCompat="@drawable/option_icon" />
+            android:layout_marginTop="15dp">
+
+            <ImageView
+                android:id="@+id/hideBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/option_icon" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imageView11"
