--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -18,7 +18,6 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:layout_marginTop="40dp"
             android:layout_marginHorizontal="120dp"
             app:srcCompat="@drawable/logo_image" />
 
@@ -47,7 +46,7 @@
                 app:srcCompat="@drawable/line" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/localLoginBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
