--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/logo_image" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/signupBtn"
         android:background="@drawable/sign_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
