--- a/app/src/main/res/layout/fragment_change_pw.xml
+++ b/app/src/main/res/layout/fragment_change_pw.xml
@@ -75,7 +75,7 @@
                 android:text="     비밀번호"
                 android:textSize="13sp" />
 
-            <FrameLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp">
@@ -88,17 +88,24 @@
                     android:inputType="textPassword"
                     android:padding="5dp"
                     android:text="비밀번호"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/imageView11"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:layout_gravity="right||center_vertical"
-                    android:layout_marginEnd="4dp"
                     android:clickable="true"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView1"
+                    app:layout_constraintEnd_toEndOf="@+id/textView1"
+                    app:layout_constraintHorizontal_bias="0.985"
+                    app:layout_constraintStart_toStartOf="@+id/textView1"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/eye_open" />
-            </FrameLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
@@ -116,31 +123,40 @@
                 android:textSize="13sp"
                 android:text="새 비밀번호" />
 
-            <FrameLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp">
 
-            <EditText
-                android:id="@+id/textView3"
-                android:background="@drawable/text_view_form"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:padding="5dp"
-                android:inputType="textPassword"
-                android:text="새 비밀번호" />
+                <EditText
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/text_view_form"
+                    android:inputType="textPassword"
+                    android:padding="5dp"
+                    android:text="새 비밀번호"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0" />
 
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginEnd="4dp"
-                android:clickable="true"
-                android:layout_gravity="right||center_vertical"
-                app:srcCompat="@drawable/eye_open" />
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:clickable="true"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/textView3"
+                    app:layout_constraintHorizontal_bias="0.985"
+                    app:layout_constraintStart_toStartOf="@+id/textView3"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/eye_open" />
 
-            </FrameLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
             <TextView
