로컬 로그인 서버 connect 구현 + ServiceGenerator.java 토큰 내용 수정 + AuthenticationInterceptor.java 헤더 추가 내용 수정 + 서버 응답 성공 시, status 조건문 .equals() 사용 + 응답 헤더 내용 가져오기 완료

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -54,7 +54,7 @@
                 app:srcCompat="@drawable/local_login" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/kakaoLoginBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -62,7 +62,7 @@
                 app:srcCompat="@drawable/kakao_login" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/googleLoginBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
