--- a/app/src/main/res/layout/activity_local_sign_in.xml
+++ b/app/src/main/res/layout/activity_local_sign_in.xml
@@ -41,7 +41,7 @@
                 android:textSize="12sp"/>
 
             <EditText
-                android:id="@+id/editTextTextEmailAddress"
+                android:id="@+id/inputEmail"
                 android:background="@drawable/text_view_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
                 android:layout_height="match_parent">
 
                 <EditText
-                    android:id="@+id/editTextTextPassword"
+                    android:id="@+id/inputPw"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/text_view_form"
@@ -77,31 +77,21 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/showPw"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_marginEnd="4dp"
                     android:clickable="true"
-                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
+                    app:layout_constraintBottom_toBottomOf="@+id/inputPw"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-                    app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
+                    app:layout_constraintStart_toStartOf="@+id/inputPw"
+                    app:layout_constraintTop_toTopOf="@+id/inputPw"
                     app:srcCompat="@drawable/eye_open" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="비밀번호를 다시 확인해주세요"
-                android:textSize="8sp"
-                android:textColor="#870000"
-                android:visibility="gone"/>
-
-            <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/findPw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
