비밀번호 잃어버렸을 때 찾기 - 첫번째 화면 기능 구현 + 응답 값 status 여부? + 예외처리 참고 + 테스트 미완

--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -48,7 +48,7 @@
                 android:textSize="12sp"/>
 
             <EditText
-                android:id="@+id/editTextTextEmailAddress"
+                android:id="@+id/inputEmailForPw"
                 android:background="@drawable/text_view_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/editTextPhone"
+                    android:id="@+id/inputPhone"
                     android:background="@drawable/text_view_form"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
                     android:textSize="14sp" />
 
                 <ImageView
-                    android:id="@+id/imageView8"
+                    android:id="@+id/receiveCodeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -95,7 +95,7 @@
 
 
             <EditText
-                android:id="@+id/editTextNumberSigned"
+                android:id="@+id/inputCode"
                 android:background="@drawable/verification_code_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
                 android:inputType="numberSigned" />
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/findPwBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
