--- a/app/src/main/res/layout/activity_local_sign_in.xml
+++ b/app/src/main/res/layout/activity_local_sign_in.xml
@@ -106,7 +106,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/findPw"
+                android:id="@+id/findPwText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
