--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -36,8 +36,8 @@
                 android:layout_height="match_parent" />
 
             <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="match_parent"
+                android:id="@+id/doSignupBtn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 app:srcCompat="@drawable/sign_up_btn" />
