메인 홈 - 리사이클러 뷰 띄우기 해결 + 이미지 뷰?

--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -39,15 +39,17 @@
 
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recommendRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="10dp" >
 
-        <ListView
-            android:id="@+id/recommendShop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
 
     </ScrollView>
 
