회원가입 보류 - 남은작업 = 추가정보 내용 추가 = 프래그먼틀 -> 액티비티 내용 전달

--- a/app/src/main/res/layout/fragment_sign_up_second.xml
+++ b/app/src/main/res/layout/fragment_sign_up_second.xml
@@ -15,11 +15,15 @@
         android:text="키"
         android:textSize="12sp" />
 
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/heightSpinner"
+    <EditText
+        android:id="@+id/inputRegisterHeight"
+        android:background="@drawable/text_view_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:spinnerMode="dropdown"/>
+        android:textSize="14sp"
+        android:padding="5dp"
+        android:ems="10"
+        android:inputType="numberSigned" />
 
     <TextView
         android:id="@+id/textView6"
@@ -29,12 +33,15 @@
         android:text="몸무게"
         android:textSize="12sp" />
 
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/weightSpinner"
+    <EditText
+        android:id="@+id/inputRegisterWeight"
+        android:background="@drawable/text_view_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:spinnerMode="dropdown"/>
-    <!-- entries 속성은 실행오류나서 사용 안함 -->
+        android:textSize="14sp"
+        android:padding="5dp"
+        android:ems="10"
+        android:inputType="numberSigned" />
 
     <TextView
         android:id="@+id/textView7"
