--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -42,18 +42,12 @@
         android:layout_marginTop="20dp"
         app:srcCompat="@drawable/line" />
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="30dp">
-
-        <ListView
-            android:id="@+id/searchListView"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/searchRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="30dp"
             android:orientation="vertical" />
-    </ScrollView>
-
 
 </LinearLayout>
