메인 홈 - 사용자 추천 몰 리스트 구현 및 테스트 완료

--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -42,16 +42,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recommendRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="10dp" >
-
-
-
-    </ScrollView>
+        android:layout_height="100dp"
+        android:layout_marginHorizontal="20dp"/>
 
     <TextView
         android:id="@+id/textView"
@@ -76,6 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:text="조회 수"
+            android:checked="true"
             android:textSize="10sp"/>
 
         <RadioButton
@@ -94,15 +87,10 @@
             android:textSize="10sp"/>
     </RadioGroup>
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/FilterRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="10dp">
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </ScrollView>
+        android:layout_height="100dp"
+        android:layout_marginHorizontal="20dp"/>
 
 </LinearLayout>
